feat: allow to filter by moderation status
